crates/vise/tests/ui/metrics/unnecessary_buckets.stderr
error[E0271]: type mismatch resolving `<Counter as BuildMetric>::Builder == MetricBuilder<Buckets>`
 --> tests/ui/metrics/unnecessary_buckets.rs:7:14
  |
7 |     counter: Counter,
  |              ^^^^^^^ expected `MetricBuilder<Buckets>`, found `MetricBuilder`
  |
  = note: expected struct `MetricBuilder<Buckets>`
             found struct `MetricBuilder<()>`
